# cp4-plan

./: .gitignore  generate-icons.bat  package-lock.json  package.json  start-server.bat
.github/workflows/: tauri-build.yml
cp4 plan/: index.html  manifest.json  sw.js
cp4 plan/css/: components.css  contests.css  dashboard.css  habits.css  main.css  notes.css  problems.css  stats.css  timer.css  weekplan.css
cp4 plan/js/: app.js  store.js  tauri-notifications.js  utils.js
cp4 plan/js/components/: charts.js  doomnotes.js  heatmap.js  modal.js  notifications.js  pomodoro.js  search.js  session.js  tagheatmap.js  toast.js
cp4 plan/js/data/: seed(past).js  seed.js
cp4 plan/js/pages/: contests.js  dashboard.js  habits.js  notes.js  problems.js  stats.js  timer.js  weekplan.js
cp4 plan/pages/: contests.html  dashboard.html  habits.html  notes.html  pdf-viewer.html  problems.html  stats.html  timer.html  weekplan.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
