[package]
name = "cp4-plan"
version = "1.0.0"
description = "CP4 Study Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "cp4_plan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
